demo/sdl_opengl3/nimnuklear/nuklear.nim


proc text*(a2: ptr context; a3: cstring; a4: cint; a5: flags) {.cdecl, importc: "nk_text",
    header: headernuklear.}
proc text_colored*(a2: ptr context; a3: cstring; a4: cint; a5: flags; a6: color) {.cdecl,
    importc: "nk_text_colored", header: headernuklear.}
proc text_wrap*(a2: ptr context; a3: cstring; a4: cint) {.cdecl, importc: "nk_text_wrap",
    header: headernuklear.}
proc text_wrap_colored*(a2: ptr context; a3: cstring; a4: cint; a5: color) {.cdecl,
    importc: "nk_text_wrap_colored", header: headernuklear.}
proc label*(a2: ptr context; a3: cstring; align: flags) {.cdecl, importc: "nk_label",
    header: headernuklear.}
proc label_colored*(a2: ptr context; a3: cstring; align: flags; a5: color) {.cdecl,
    importc: "nk_label_colored", header: headernuklear.}
proc label_wrap*(a2: ptr context; a3: cstring) {.cdecl, importc: "nk_label_wrap",
    header: headernuklear.}
proc label_colored_wrap*(a2: ptr context; a3: cstring; a4: color) {.cdecl,
    importc: "nk_label_colored_wrap", header: headernuklear.}
proc image*(a2: ptr context; a3: img) {.cdecl, importc: "struct nk_image",
                                    header: headernuklear.}
proc image_color*(a2: ptr context; a3: img; a4: color) {.cdecl,
    importc: "nk_image_color", header: headernuklear.}
proc button_text*(a2: ptr context; title: cstring; len: cint): cint {.cdecl,
    importc: "nk_button_text", header: headernuklear.}
proc button_label*(a2: ptr context; title: cstring): cint {.cdecl,
    importc: "nk_button_label", header: headernuklear.}
proc button_color*(a2: ptr context; a3: color): cint {.cdecl,
    importc: "nk_button_color", header: headernuklear.}
proc button_symbol*(a2: ptr context; a3: symbol_type): cint {.cdecl,
    importc: "nk_button_symbol", header: headernuklear.}
proc button_image*(a2: ptr context; img: img): cint {.cdecl,
    importc: "nk_button_image", header: headernuklear.}
proc button_symbol_label*(a2: ptr context; a3: symbol_type; a4: cstring;
                         text_alignment: flags): cint {.cdecl,
    importc: "nk_button_symbol_label", header: headernuklear.}
proc button_symbol_text*(a2: ptr context; a3: symbol_type; a4: cstring; a5: cint;
                        alignment: flags): cint {.cdecl,
    importc: "nk_button_symbol_text", header: headernuklear.}
proc button_image_label*(a2: ptr context; img: img; a4: cstring; text_alignment: flags): cint {.
    cdecl, importc: "nk_button_image_label", header: headernuklear.}
proc button_image_text*(a2: ptr context; img: img; a4: cstring; a5: cint;
                       alignment: flags): cint {.cdecl,
    importc: "nk_button_image_text", header: headernuklear.}
proc button_text_styled*(a2: ptr context; a3: ptr style_button; title: cstring; len: cint): cint {.
    cdecl, importc: "nk_button_text_styled", header: headernuklear.}
proc button_label_styled*(a2: ptr context; a3: ptr style_button; title: cstring): cint {.
    cdecl, importc: "nk_button_label_styled", header: headernuklear.}
proc button_symbol_styled*(a2: ptr context; a3: ptr style_button; a4: symbol_type): cint {.
    cdecl, importc: "nk_button_symbol_styled", header: headernuklear.}
proc button_image_styled*(a2: ptr context; a3: ptr style_button; img: img): cint {.
    cdecl, importc: "nk_button_image_styled", header: headernuklear.}
proc button_symbol_text_styled*(a2: ptr context; a3: ptr style_button; a4: symbol_type;
                               a5: cstring; a6: cint; alignment: flags): cint {.cdecl,
    importc: "nk_button_symbol_text_styled", header: headernuklear.}
proc button_symbol_label_styled*(ctx: ptr context; style: ptr style_button;
                                symbol: symbol_type; title: cstring; align: flags): cint {.
    cdecl, importc: "nk_button_symbol_label_styled", header: headernuklear.}
proc button_image_label_styled*(a2: ptr context; a3: ptr style_button; img: img;
                               a5: cstring; text_alignment: flags): cint {.cdecl,
    importc: "nk_button_image_label_styled", header: headernuklear.}
proc button_image_text_styled*(a2: ptr context; a3: ptr style_button; img: img;
                              a5: cstring; a6: cint; alignment: flags): cint {.cdecl,
    importc: "nk_button_image_text_styled", header: headernuklear.}
proc button_set_behavior*(a2: ptr context; a3: button_behavior) {.cdecl,
    importc: "nk_button_set_behavior", header: headernuklear.}
proc button_push_behavior*(a2: ptr context; a3: button_behavior): cint {.cdecl,
    importc: "nk_button_push_behavior", header: headernuklear.}
proc button_pop_behavior*(a2: ptr context): cint {.cdecl,
    importc: "nk_button_pop_behavior", header: headernuklear.}
proc check_label*(a2: ptr context; a3: cstring; active: cint): cint {.cdecl,
    importc: "nk_check_label", header: headernuklear.}
proc check_text*(a2: ptr context; a3: cstring; a4: cint; active: cint): cint {.cdecl,
    importc: "nk_check_text", header: headernuklear.}
proc check_flags_label*(a2: ptr context; a3: cstring; flags: cuint; value: cuint): cuint {.
    cdecl, importc: "nk_check_flags_label", header: headernuklear.}
proc check_flags_text*(a2: ptr context; a3: cstring; a4: cint; flags: cuint; value: cuint): cuint {.
    cdecl, importc: "nk_check_flags_text", header: headernuklear.}
proc checkbox_label*(a2: ptr context; a3: cstring; active: ptr cint): cint {.cdecl,
    importc: "nk_checkbox_label", header: headernuklear.}
proc checkbox_text*(a2: ptr context; a3: cstring; a4: cint; active: ptr cint): cint {.cdecl,
    importc: "nk_checkbox_text", header: headernuklear.}
proc checkbox_flags_label*(a2: ptr context; a3: cstring; flags: ptr cuint; value: cuint): cint {.
    cdecl, importc: "nk_checkbox_flags_label", header: headernuklear.}
proc checkbox_flags_text*(a2: ptr context; a3: cstring; a4: cint; flags: ptr cuint;
                         value: cuint): cint {.cdecl,
    importc: "nk_checkbox_flags_text", header: headernuklear.}
proc radio_label*(a2: ptr context; a3: cstring; active: ptr cint): cint {.cdecl,
    importc: "nk_radio_label", header: headernuklear.}
proc radio_text*(a2: ptr context; a3: cstring; a4: cint; active: ptr cint): cint {.cdecl,
    importc: "nk_radio_text", header: headernuklear.}
proc option_label*(a2: ptr context; a3: cstring; active: cint): cint {.cdecl,
    importc: "nk_option_label", header: headernuklear.}
proc option_text*(a2: ptr context; a3: cstring; a4: cint; active: cint): cint {.cdecl,
    importc: "nk_option_text", header: headernuklear.}
proc selectable_label*(a2: ptr context; a3: cstring; align: flags; value: ptr cint): cint {.
    cdecl, importc: "nk_selectable_label", header: headernuklear.}
proc selectable_text*(a2: ptr context; a3: cstring; a4: cint; align: flags;
                     value: ptr cint): cint {.cdecl, importc: "nk_selectable_text",
    header: headernuklear.}
proc selectable_image_label*(a2: ptr context; a3: img; a4: cstring; align: flags;
                            value: ptr cint): cint {.cdecl,
    importc: "nk_selectable_image_label", header: headernuklear.}
proc selectable_image_text*(a2: ptr context; a3: img; a4: cstring; a5: cint;
                           align: flags; value: ptr cint): cint {.cdecl,
    importc: "nk_selectable_image_text", header: headernuklear.}
proc selectable_symbol_label*(a2: ptr context; a3: symbol_type; a4: cstring;
                             align: flags; value: ptr cint): cint {.cdecl,
    importc: "nk_selectable_symbol_label", header: headernuklear.}
proc selectable_symbol_text*(a2: ptr context; a3: symbol_type; a4: cstring; a5: cint;
                            align: flags; value: ptr cint): cint {.cdecl,
    importc: "nk_selectable_symbol_text", header: headernuklear.}
proc select_label*(a2: ptr context; a3: cstring; align: flags; value: cint): cint {.cdecl,
    importc: "nk_select_label", header: headernuklear.}
proc select_text*(a2: ptr context; a3: cstring; a4: cint; align: flags; value: cint): cint {.
    cdecl, importc: "nk_select_text", header: headernuklear.}
proc select_image_label*(a2: ptr context; a3: img; a4: cstring; align: flags;
                        value: cint): cint {.cdecl,
    importc: "nk_select_image_label", header: headernuklear.}
proc select_image_text*(a2: ptr context; a3: img; a4: cstring; a5: cint; align: flags;
                       value: cint): cint {.cdecl, importc: "nk_select_image_text",
    header: headernuklear.}
proc select_symbol_label*(a2: ptr context; a3: symbol_type; a4: cstring; align: flags;
                         value: cint): cint {.cdecl,
    importc: "nk_select_symbol_label", header: headernuklear.}
proc select_symbol_text*(a2: ptr context; a3: symbol_type; a4: cstring; a5: cint;
                        align: flags; value: cint): cint {.cdecl,
    importc: "nk_select_symbol_text", header: headernuklear.}
proc slide_float*(a2: ptr context; min: cfloat; val: cfloat; max: cfloat; step: cfloat): cfloat {.
    cdecl, importc: "nk_slide_float", header: headernuklear.}
proc slide_int*(a2: ptr context; min: cint; val: cint; max: cint; step: cint): cint {.cdecl,
    importc: "nk_slide_int", header: headernuklear.}
proc slider_float*(a2: ptr context; min: cfloat; val: ptr cfloat; max: cfloat; step: cfloat): cint {.
    cdecl, importc: "nk_slider_float", header: headernuklear.}
proc slider_int*(a2: ptr context; min: cint; val: ptr cint; max: cint; step: cint): cint {.
    cdecl, importc: "nk_slider_int", header: headernuklear.}
proc progress*(a2: ptr context; cur: ptr size; max: size; modifyable: cint): cint {.cdecl,
    importc: "nk_progress", header: headernuklear.}
proc prog*(a2: ptr context; cur: size; max: size; modifyable: cint): size {.cdecl,
    importc: "nk_prog", header: headernuklear.}
proc color_picker*(a2: ptr context; a3: colorf; a4: color_format): colorf {.cdecl,
    importc: "nk_color_picker", header: headernuklear.}
proc color_pick*(a2: ptr context; a3: ptr colorf; a4: color_format): cint {.cdecl,
    importc: "nk_color_pick", header: headernuklear.}
proc property_int*(a2: ptr context; name: cstring; min: cint; val: ptr cint; max: cint;
                  step: cint; inc_per_pixel: cfloat) {.cdecl,
    importc: "nk_property_int", header: headernuklear.}
proc property_float*(a2: ptr context; name: cstring; min: cfloat; val: ptr cfloat;
                    max: cfloat; step: cfloat; inc_per_pixel: cfloat) {.cdecl,
    importc: "nk_property_float", header: headernuklear.}
proc property_double*(a2: ptr context; name: cstring; min: cdouble; val: ptr cdouble;
                     max: cdouble; step: cdouble; inc_per_pixel: cfloat) {.cdecl,
    importc: "nk_property_double", header: headernuklear.}
proc propertyi*(a2: ptr context; name: cstring; min: cint; val: cint; max: cint; step: cint;
               inc_per_pixel: cfloat): cint {.cdecl, importc: "nk_propertyi",
    header: headernuklear.}
proc propertyf*(a2: ptr context; name: cstring; min: cfloat; val: cfloat; max: cfloat;
               step: cfloat; inc_per_pixel: cfloat): cfloat {.cdecl,
    importc: "nk_propertyf", header: headernuklear.}
proc propertyd*(a2: ptr context; name: cstring; min: cdouble; val: cdouble; max: cdouble;
               step: cdouble; inc_per_pixel: cfloat): cdouble {.cdecl,
    importc: "nk_propertyd", header: headernuklear.}
type
  edit_flags* {.size: sizeof(cint).} = enum
    EDIT_DEFAULT = 0, EDIT_READ_ONLY = (1 shl (0)), EDIT_AUTO_SELECT = (1 shl (1)),
    EDIT_SIG_ENTER = (1 shl (2)), EDIT_ALLOW_TAB = (1 shl (3)),
    EDIT_NO_CURSOR = (1 shl (4)), EDIT_SELECTABLE = (1 shl (5)),
    EDIT_CLIPBOARD = (1 shl (6)), EDIT_CTRL_ENTER_NEWLINE = (1 shl (7)),
    EDIT_NO_HORIZONTAL_SCROLL = (1 shl (8)), EDIT_ALWAYS_INSERT_MODE = (1 shl (9)),
    EDIT_MULTILINE = (1 shl (10)), EDIT_GOTO_END_ON_ACTIVATE = (1 shl (11))

